--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
     "react-dom": "16.13.1",
     "react-native": "https://github.com/expo/react-native/archive/sdk-42.0.0.tar.gz",
     "react-native-gesture-handler": "^1.10.3",
-    "react-native-reanimated": "^2.2.3",
+    "react-native-reanimated": "~2.2.0",
     "react-native-safe-area-context": "3.2.0",
     "react-native-screens": "^3.8.0",
     "react-native-vector-icons": "^8.1.0",
